fix: z-index bug

--- a/src/components/navigation/Navbar/Navbar.module.scss
+++ b/src/components/navigation/Navbar/Navbar.module.scss
@@ -39,7 +39,7 @@
 
 .navbar_mobile {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   top: 0;
   left: 0;
   right: 0;
